add student lifecycle management; implement fields for start date, holiday mode, and stopped attending in student entity, update related APIs and SQL scripts, and enhance documentation